--- a/ejercicio-card/css/style.css
+++ b/ejercicio-card/css/style.css
@@ -45,14 +45,9 @@ h2 {
 }
 
 h3 {
-    font-size: 18px;
-    line-height: 21px;
-    font-weight: 700;
-}
-
-h1,
-h2 {
     font-family: var(--secondary-font);
+    font-size: 24px;
+    line-height: 21px;
     font-weight: 700;
 }
 
@@ -84,22 +79,26 @@ Components
 *****************************/
 
 .main-home-card {
+    width: 1200px;
+    padding: 0 10px;
+    margin: 0 auto;
+}
+
+.container {
+    border: 1px solid deeppink;
+}
+
+.main-home-card {
     width: 380px;
     justify-items: center;
 }
 
-.container h1 {
-    font-family: 'Roboto Slab', serif;
-    font-size: 24px;
-}
-
 .container p {
     font-family: 'Raleway', sans-serif;
-    text-transform: uppercase;
 }
 
 .btn {
-    background-color: #AD7D52;
+    background-color: var(--primary-color);
     display: inline-block;
     border-radius: 20px;
     width: 180px;
@@ -108,6 +107,15 @@ Components
     font-family: 'Raleway';
     color: #fff;
     font-size: 16px;
+    border-color: transparent;
+}
+
+.container span {
+    color: var(--primary-color);
+}
+
+.home-p {
+    margin: 26px 20px;
 }
 
 
