--- a/ejercicio-card/css/variable.css
+++ b/ejercicio-card/css/variable.css
@@ -3,7 +3,7 @@ Variables
 *****************************/
 
 :root {
-    --primary-color: #FF0402;
+    --primary-color: #AD7D52;
     --secondary-color: #707070;
     --terteary-color: #A0A3A8;
     --quaternary-color: #F5FAFD;
