--- a/sesion-08/css/variable.css
+++ b/sesion-08/css/variable.css
@@ -3,7 +3,7 @@ Variables
 *****************************/
 
 :root {
-    --primary-color: #FF0402;
+    --primary-color: #AD7D52;
     --secondary-color: #707070;
     --terteary-color: #A0A3A8;
     --quaternary-color: #F5FAFD;
@@ -11,5 +11,5 @@ Variables
     --white-color: #FFF;
     --black-color: #000;
     --primary-font: 'Raleway', sans-serif;
-    --secondary-font: 'Zilla Slab', serif;
+    --secondary-font: 'Roboto Slab', serif;
 }
